# base28

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SPEC.md  pyproject.toml  test-vectors.json
src/base28/: __init__.py  _alphabet.py  _core.py  _damm.py  _verify.py  cli.py  errors.py  rev45.py
src/base28/data/: damm_table.json
tests/: test_base28ref.py  test_cli.py  test_core.py  test_damm_table.py  test_rev45.py  test_vectors_file.py  test_verify.py
tools/: base28ref.py  generate_damm_table.py  generate_vectors.py  verify_vectors.py
