[project]
name = "base28"
version = "0.1.1"
description = "Confusable-hardened symbol encoding for short, printed, human-transcribable codes"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Jan Philip Göpfert", email = "janphilip@gopfert.eu" }]
keywords = ["encoding", "base28", "identifier", "checksum", "damm", "human-transcribable"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]
requires-python = ">=3.14"
dependencies = []

[project.urls]
Homepage = "https://github.com/jangop/base28"
Repository = "https://github.com/jangop/base28"
Issues = "https://github.com/jangop/base28/issues"

[project.scripts]
base28 = "base28.cli:main"

[dependency-groups]
dev = [
    "basedpyright>=1.39.9",
    "commitizen>=4.16.5",
    "lefthook>=2.1.10",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/base28"]

[tool.pytest.ini_options]
# src/ is on the path via the editable install of the project itself; "." lets
# tests import the dev-only generators under tools/.
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tools", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.basedpyright]
typeCheckingMode = "standard"
include = ["src", "tools", "tests"]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
major_version_zero = true
update_changelog_on_bump = true
